--- a/fix-docsrs-li-details-summary.html
+++ b/fix-docsrs-li-details-summary.html
@@ -1,5 +1,65 @@
 <style>
-summary {
+details.custom > summary {
     display: list-item;
+    /* https://medium.com/simple-human/buttons-shouldnt-have-a-hand-cursor-b11e99ca374b */
+    cursor: default;
+}
+
+.summary-box {
+    display: inline-block;
+}
+
+details.custom > summary span.summary-to-hide,
+details[open].custom > summary span.summary-to-see {
+    display: none;
+}
+details.custom > summary span.summary-to-see,
+details[open].custom > summary span.summary-to-hide {
+    display: inline;
+}
+
+/**
+ *  Button style from https://github.com/ubuwaits/css3-buttons
+ *        MIT-Licensed under the name of Chad Mazzola
+ *       rev: c5d2eccd18c0be21c291982e40da0c590f8bc32f
+ *
+ *  I changed the following: I removed the padding, the width and `cursor: pointer`.
+ **/
+.summary-box {
+  background-color: #eeeeee;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: linear-gradient(top, #eeeeee, #cccccc);
+  border: 1px solid #ccc;
+  border-bottom: 1px solid #bbb;
+  border-radius: 3px;
+  color: #333;
+  font: bold 11px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  /* padding: 8px 0; */
+  text-align: center;
+  text-shadow: 0 1px 0 #eee;
+  /* width: 150px; */
+}
+.summary-box:hover {
+    background-color: #dddddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #bbbbbb));
+    background-image: -webkit-linear-gradient(top, #dddddd, #bbbbbb);
+    background-image: -moz-linear-gradient(top, #dddddd, #bbbbbb);
+    background-image: -ms-linear-gradient(top, #dddddd, #bbbbbb);
+    background-image: -o-linear-gradient(top, #dddddd, #bbbbbb);
+    background-image: linear-gradient(top, #dddddd, #bbbbbb);
+    border: 1px solid #bbb;
+    border-bottom: 1px solid #999;
+    /* cursor: pointer; */
+    text-shadow: 0 1px 0 #ddd;
+}
+.summary-box:active {
+    border: 1px solid #aaa;
+    border-bottom: 1px solid #888;
+    -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+    box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
 }
 </style>
