Use `https` for cdn font import to avoid load errors

--- a/fix-docsrs-li-details-summary.html
+++ b/fix-docsrs-li-details-summary.html
@@ -1,6 +1,6 @@
 <style>
-@import url('http://fonts.cdnfonts.com/css/apercu');
-@import url('http://fonts.cdnfonts.com/css/fira-code-2');
+@import url('https://fonts.cdnfonts.com/css/apercu');
+@import url('https://fonts.cdnfonts.com/css/fira-code-2');
 
 details.custom > summary {
     display: list-item;
